--- a/Resources/views/lockedWindow.html.twig
+++ b/Resources/views/lockedWindow.html.twig
@@ -18,23 +18,25 @@
         </div>
     </div>
 </div>
-
-<script type="text/javascript">
-/* <![CDATA[ */
-    ( function($) {
-        $(document).ready(function() {
-            {% if lockName is not empty %}
-                {% if hasLock %}
-                    $(document).ready(PageLock.UnlockedPage);
-                {% else %}
-                    $(document).ready(PageLock.LockedPage);
+{% set customScript %}
+    <script>
+    /* <![CDATA[ */
+        ( function($) {
+            $(document).ready(function() {
+                {% if lockName is not empty %}
+                    {% if hasLock %}
+                        $(document).ready(PageLock.UnlockedPage);
+                    {% else %}
+                        $(document).ready(PageLock.LockedPage);
+                    {% endif %}
                 {% endif %}
-            {% endif %}
-        });
-    })(jQuery);
+            });
+        })(jQuery);
 
-    PageLock.LockName = '{{ lockName }}';
-    PageLock.ReturnUrl = '{{ returnUrl }}';
-    PageLock.PingTime = {{ pingTime }};
-/* ]]> */
-</script>
+        PageLock.LockName = '{{ lockName }}';
+        PageLock.ReturnUrl = '{{ returnUrl }}';
+        PageLock.PingTime = {{ pingTime }};
+    /* ]]> */
+    </script>
+{% endset %}
+{{ pageAddAsset('footer', customScript) }}
