--- a/Resources/views/lockedWindow.html.twig
+++ b/Resources/views/lockedWindow.html.twig
@@ -2,18 +2,18 @@
     <div class="modal-dialog text-left">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="pageLockModalLabel"><i class="fa fa-circle-notch fa-spin"></i> {{ __('This page is locked') }}</h5>
-                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">{{ __('Close') }}</span></button>
+                <h5 class="modal-title" id="pageLockModalLabel"><i class="fa fa-circle-notch fa-spin"></i> {% trans %}This page is locked'{% endtrans %}</h5>
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">{% trans %}Close{% endtrans %}</span></button>
             </div>
             <div class="modal-body">
-                <p>{{ __('This page is locked because another user is working on it. Please wait: the page will be unlocked automatically when the other user has finished, and you will be informed.') }}</p>
+                <p>{% trans %}This page is locked because another user is working on it. Please wait: the page will be unlocked automatically when the other user has finished, and you will be informed.{% endtrans %}</p>
                 <div id="pageLockOverlayLED"></div>
-                <p>{{ __f('Locked by %s.', {'%s': lockedBy}) }}</p>
+                <p>{% trans with {'%s': lockedBy} %}Locked by %s.{% endtrans %}</p>
             </div>
             <div class="modal-footer">
-                <button type="button" id="pageLockBackButton" class="btn btn-secondary" data-dismiss="modal">{{ __('Back') }}</button>
-                <button type="button" id="pageLockRecheckButton" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-sync"></i> {{ __('Check again') }}</button>
-                <button type="button" id="pageLockIgnoreButton" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-exclamation-triangle"></i> {{ __('Ignore lock') }}</button>
+                <button type="button" id="pageLockBackButton" class="btn btn-secondary" data-dismiss="modal">{% trans %}Back{% endtrans %}</button>
+                <button type="button" id="pageLockRecheckButton" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-sync"></i> {% trans %}Check again{% endtrans %}</button>
+                <button type="button" id="pageLockIgnoreButton" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-exclamation-triangle"></i> {% trans %}Ignore lock{% endtrans %}</button>
             </div>
         </div>
     </div>
