--- a/Resources/views/lockedWindow.html.twig
+++ b/Resources/views/lockedWindow.html.twig
@@ -2,7 +2,7 @@
     <div class="modal-dialog text-left">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="pageLockModalLabel"><i class="fa fa-circle-notch fa-spin"></i> {% trans %}This page is locked'{% endtrans %}</h5>
+                <h5 class="modal-title" id="pageLockModalLabel"><i class="fa fa-circle-notch fa-spin"></i> {% trans %}This page is locked{% endtrans %}</h5>
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">{% trans %}Close{% endtrans %}</span></button>
             </div>
             <div class="modal-body">
