--- a/Resources/views/lockedWindow.html.twig
+++ b/Resources/views/lockedWindow.html.twig
@@ -2,7 +2,7 @@
     <div class="modal-dialog text-left">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="pageLockModalLabel"><i class="fa fa-circle-notch fa-spin"></i> {% trans %}This page is locked{% endtrans %}</h5>
+                <h5 class="modal-title" id="pageLockModalLabel"><i class="fas fa-circle-notch fa-spin"></i> {% trans %}This page is locked{% endtrans %}</h5>
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">{% trans %}Close{% endtrans %}</span></button>
             </div>
             <div class="modal-body">
@@ -12,8 +12,8 @@
             </div>
             <div class="modal-footer">
                 <button type="button" id="pageLockBackButton" class="btn btn-secondary" data-dismiss="modal">{% trans %}Back{% endtrans %}</button>
-                <button type="button" id="pageLockRecheckButton" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-sync"></i> {% trans %}Check again{% endtrans %}</button>
-                <button type="button" id="pageLockIgnoreButton" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-exclamation-triangle"></i> {% trans %}Ignore lock{% endtrans %}</button>
+                <button type="button" id="pageLockRecheckButton" class="btn btn-primary" data-dismiss="modal"><i class="fas fa-sync"></i> {% trans %}Check again{% endtrans %}</button>
+                <button type="button" id="pageLockIgnoreButton" class="btn btn-danger" data-dismiss="modal"><i class="fas fa-exclamation-triangle"></i> {% trans %}Ignore lock{% endtrans %}</button>
             </div>
         </div>
     </div>
